--- a/.env.testing
+++ b/.env.testing
@@ -10,8 +10,8 @@ DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=database.sqlite
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
