--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,17 +13,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      
+      
+    - name: Prepare Environment
+      run: |
+          sudo apt update
+          sudo docker-php-ext-install zip
+      
     - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.testing', '.env');"
+      run: cp .env.testing .env
       
     - name: Install Dependencies
-      run: composer install -n --prefer-dist
+      run: composer update
       
     - name: Generate key
       run: php artisan key:generate
-      
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
       
     - name: Create Database
       run: |
